@@ -25,7 +25,7 @@
 
 module EventMachine
 
-  VERSION = "0.12.0"
+  VERSION = "0.12.2"
 
 end
 
